[FIX] Vertical alignment of site title and subtitle.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/3.0@18598 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/coelesce.css
+++ b/styles/coelesce.css
@@ -443,6 +443,7 @@ input[id="sl-login-pass"] {}
 	color: #fff;
 	display: inline;
 	height: 97px;
+	line-height: 97px;
 	margin-top: 6px;
 	overflow: hidden;
 	vertical-align: bottom;
